fix: justify text on firefox
1. Fix justify text on firefox (add hyphens)
2. Add C# in stack

--- a/src/Text.scss
+++ b/src/Text.scss
@@ -69,6 +69,8 @@ h4,
     white-space: pre-wrap;
     text-indent: 1.5em;
     tab-size: 1.5em;
+    hyphens: auto;
+    // word-break: break-all;
 }
 
 .description {
@@ -76,6 +78,8 @@ h4,
     white-space: pre-wrap;
     text-indent: 1.5em;
     tab-size: 1.5em;
+    hyphens: auto;
+    // word-break: break-all;
 }
 
 @media only screen and (max-width: 960px) and (max-height: 560px) and (orientation: landscape) {
